<resources>
    <string name="API_KEY_TOMTOM">5dOTKQGhHLeGP0lQztyWFzPDswXAdBA7</string>
    <string name="app_name">GetCars</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_messages">Messages</string>
    <string name="title_account">Account</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>

    <string name="identifier">Identifier</string>
    <string name="password">Password</string>
    <string name="password2">Confirm Password</string>
    <string name="email">Email</string>
    <string name="lastname">Last Name</string>
    <string name="firstname">First Name</string>
    <string name="age">Age</string>
    <string name="phonenumber">Phone Number</string>
    <string name="title_activity_launch">LaunchActivity</string>

    <string name="changePassword">Change Password</string>
    <string name="login_button">login</string>
    <string name="refresh_request">Error, Please Refresh</string>
    <string name="no_messages">No Messages</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!--  Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">back</string>
    <string name="add_annonce">Add Annonce</string>
    <string name="title">Title</string>
    <string name="type">Type</string>
    <string name="brand">Brand</string>
    <string name="modele">Modele</string>
    <string name="description">Description</string>
    <string name="transmission">Transmission</string>
    <string name="mileage">Mileage</string>
    <string name="price">Price</string>
    <string name="wilaya">Wilaya</string>
    <string name="color">Color</string>
    <string name="year">Year</string>
    <string name="engine">Engine</string>
    <string name="energy">Energy</string>
    <string name="add">Add</string>
    <string name="images">Images</string>
    <string name="login_request">Please Login</string>
    <string name="my_announcements">My Announcements</string>
    <string name="announcements">Announcements</string>
    <string name="send_message">Send Message</string>
    <string name="no_annoncements">no Announcements</string>
    <string name="save">Save</string>
    <string name="demande">Demande</string>
    <string name="etat">etat</string>
    <string name="etatText">etat</string>
    <string name="date">Date</string>
    <string name="location">Lieu</string>
    <string name="date_debut">Date Debut</string>
    <string name="date_fin">Date Fin</string>
    <string name="delete_account">Delete Account</string>
    <string name="id">ID</string>
</resources>