<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="2dp"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?attr/colorOnPrimary"
        android:padding="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demande"
                android:textSize="20sp"

                />
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:text="@string/title"
                android:textSize="22sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="?attr/colorPrimary"
                android:layout_weight="0.8"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/etatText"
                android:textSize="18sp"
                android:layout_weight="0.1"
                />
            <TextView
                android:id="@+id/etat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:text="@string/etat"
                android:textSize="18sp"
                android:textColor="?attr/colorPrimary"
                android:gravity="end"
                android:layout_weight="0.6"
                />
        </LinearLayout>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:dividerColor="?attr/colorPrimary"
            android:layout_marginTop="10dp"
            />

        <include
            android:id="@+id/container_person"
            layout="@layout/person_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            android:id="@id/container_annonce"
            layout="@layout/annonce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>



</LinearLayout>