<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.map.MapActivityKotlin">




    <androidx.fragment.app.FragmentContainerView
        xmlns:tomtom="http://schemas.android.com/apk/res-auto"
        android:id="@+id/map_fragment"
        android:name="com.tomtom.sdk.map.display.ui.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="visible"
        tomtom:mapKey="@string/API_KEY_TOMTOM"
        tomtom:layout_constraintTop_toTopOf="parent"
        tomtom:layout_constraintBottom_toBottomOf="parent"
        tomtom:layout_constraintStart_toStartOf="parent"
        tomtom:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_back"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:text="@string/back"
        android:textAlignment="textStart"
        app:icon="@drawable/baseline_arrow_back_24"
        app:iconGravity="start"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/save"
        android:textAlignment="center"
        app:iconGravity="start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout>